--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		{ q: "What is FWC’s slogan?", options: ["Raising Leaders, Impacting Nations", "Love Jesus, Love People", "Worship, Serve, Transform", "Walking in Victory"] },
 		{ q: "What does FWC emphasize in its teaching?", options: ["Family values", "Business growth", "Political strategies", "Entrepreneurship"] },
 		{ q: "What is the name of FWC’s children’s ministry?", options: ["Kingdom Kids", "Jesus Champions", "Children of Light", "Royal Kids"] },
-		{ q: "FWC’s worship team focus on ____", options: ["Spreading the gospel through music", "Entertaining people", "Organizing social events", "Performing in concerts"] },
+		{ q: "FWC’s worship team focuses on ____", options: ["Spreading the gospel through music", "Entertaining people", "Organizing social events", "Performing in concerts"] },
 		{ q: "Where did FWC hold its first Sunday service?", options: ["Eagle's Square", "Sheraton Hotel Abuja", "Millenium Park", "Trancorp Hilton"] },
 		{ q: "What is the name of FWC’s youth ministry?", options: ["Fire Generation", "Ignite", "Kingdom Youth", "Trail Blaizers"] },
 		{ q: "FWC’s men's ministry is referred to as?", options: ["Men pf the Kingdom", "Ignite", "Anchor", "Trail Blaizers"] },
@@ -221,21 +221,41 @@
 		{ q: "What is the vision statement of Family Worship Centre?", options: ["Raising Godly families", "Loving Jesus and loving people", "Evangelism and discipleship", "Worship and church planting"] },
 		{ q: "What is the meaning of FWC?", options: ["Family Worship Centre", "Faithful Worship Congregation", "Family Winning Church", "Followers Worship Center"] },
 		{ q: "What is the name of the annual women's conference at FWC?", options: ["Deborah’s Gathering", "Women of Destiny Conference", "Women of Excellence Conference", "Daughters of Zion Conference"] },
+		{ q: "What is the official website of Family Worship Centre Abuja?", options: ["www.fwcabuja.com", "www.fwcabuja.org", "www.familyworshipcentre.org", "www.fwcng.org"] },
+		{ q: "What is the purpose of the Discipleship Training School (DTS) at FWC?", options: ["Advanced theological studies", "Basic Christian education for new believers", "Music training", "Financial empowerment"] },
+		{ q: "In which district is the main FWC Abuja church office located?", options: ["Garki", "Maitama", "Wuye", "Asokoro"] },
+		{ q: "Which of these best describes the leadership style of Family Worship Centre?", options: ["Dictatorship", "Servant Leadership", "Autocracy", "Military-style discipline"] },
 		// Add 17 more intermediate questions...
             ],
             advanced: [
-                { q: "What is the speed of light?", options: ["300,000 km/s", "150,000 km/s", "450,000 km/s", "600,000 km/s"] },
-                { q: "Who developed the theory of relativity?", options: ["Isaac Newton", "Albert Einstein", "Stephen Hawking", "Niels Bohr"] },
-                { q: "What is the largest planet in the solar system?", options: ["Earth", "Saturn", "Jupiter", "Neptune"] },
-                { q: "True or False: Family Worship Centre emphasizes character development.", options: ["6", "8", "10", "12"] },
+                { q: "What is the main theme of Family Worship Centre’s teachings?", options: ["Salvation through Jesus Christ", "Financial success", "Political empowerment", "Business growth"] },
+                { q: "Which of these ministries focuses on prayer in Family Worship Centre?", options: ["Intercessory Ministry", "Worship Ministry", "Hospitality Ministry", "Outreach Ministry"] },
+                { q: "What is the core mission of Family Worship Centre’s Welfare Ministry?", options: ["Helping only church members", "Providing for the needy, widows, and orphans", "Supporting business ventures", "Organizing social events"] },
+                { q: "What type of leadership structure does Family Worship Centre operate?", options: ["Episcopal", "Apostolic", "Pastoral with structured departments", "Hierarchical"] },
+		{ q: "What is a common greeting among Family Worship Centre members?", options: ["Peace and Love", "Knowing Jesus and Making Him Known", "Victory Always", "Grace and Glory"] },				
+		{ q: "Which of these describes Family Worship Centre’s policy on tithes and offerings?", options: ["Compulsory for all members", "Given willingly as part of worship", "Paid as a church membership fee", "Only for pastors"] },		
+		{ q: "Which of these is a major annual event at Family Worship Centre?", options: ["Love Feast", "Festival of Praise", "Easter Crusade", "The Great Awakening", ] },
+		{ q: "Which of these is a key focus of Family Worship Centre’s discipleship program?", options: ["Business networking", "Political involvement", "Deep understanding of the Bible", "Fundraising strategies"] },
+		{ q: "Family Worship Centre’s doctrine is based on which theological foundation?", options: ["Prosperity gospel", "Holiness and righteousness in Christ", "Church traditions", "Self-development principles"] },
+		{ q: "What role do care group centers play in Family Worship Centre?", options: ["They serve as mini-churches", "They provide a place for members to study the Bible together", "They are strictly for new members", "They are only for pastors"] },
+		{ q: "What is the significance of communion in Family Worship Centre?", options: ["A remembrance of Jesus’ sacrifice", "A ritual for special members", "A tradition to receive blessings", "A church membership requirement"] },
+		{ q: "Which of these best describes Family Worship Centre’s approach to community service?", options: ["Only supports church members", "Focuses on providing social impact programs for all", "Prioritizes members in business", "Runs only through financial donations"] },
+		{ q: "What is the primary duty of the Ushering Ministry in Family Worship Centre?", options: ["Collecting offerings", "Maintaining order and welcoming people", "Handling church finances", "Preaching sermons"] },
+		{ q: "How does Family Worship Centre support new believers?", options: ["Baptism and enrolling them in decipleship training school (DTS)", "Assigning them a mentor", "Giving them books", "Encouraging them to join a ministry"] },
+		{ q: "Which of these statements is true about Family Worship Centre’s worship team?", options: ["It is made up only of professionals", "It does not allow contemporary music", "It is exclusively for youth members", "It focuses on worship that leads people into God’s presence"] },
+		{ q: "Which of these best describes the atmosphere of Family Worship Centre’s services?", options: ["Solemn and quiet", "Energetic, joyful, and spirit-filled", "Reserved and conservative", "Strictly formal"] },
+		{ q: "What is Family Worship Centre’s approach to leadership training?", options: ["Open to only pastors", "Encourages all members to grow as leaders", "Available by invitation only", "Focused only on senior church workers"] },
+		{ q: "How does Family Worship Centre encourage church growth?", options: ["Evangelism and discipleship", "Financial incentives", "Only through social media", "By attracting celebrities"] },
+		{ q: "What is emphasized in Family Worship Centre’s teachings on giving?", options: ["Giving should be done willingly and cheerfully", "Giving is mandatory for membership", "Members must give publicly", "Only rich members are expected to give"] },
+		{ q: "How does Family Worship Centre conduct baptisms?", options: ["By sprinkling water", "By full immersion in water", "Only through prayer", "Baptisms are not conducted"] },
 		// Add 17 more advanced questions...
             ]
         };
 
         const answers = {
-            beginner: ["Abuja", "Pastor Ina Omakwu", "1993", "Pastor Sarah Omakwu", "Raising people with a heart for God", "The Missions Department", "Raising people with a heart for God", "SALT", "The mission Department", "Love Jesus, Love People", "Family values", "Royal Kids", "Spreading the gospel through music", "Sheraton Hotel Abuja", "Trail Blaizers", "Anchor", "Care Groups", "Purple", "8:00 AM", "The Holy Bible"/* Add 17 more answers */],
-            intermediate: ["Marriage Enhancement Clas", "Ushering Department", "Strategic Advance Leadership Training", "Women’s spiritual growth", "Anvil", "Live streaming and recording", "Pentecostal", "Over 500", "2012", "Educational sponsorships", "Medical Missions", "Prison Outreach Team", "Free to Live", "Loving Jesus and loving people", "Family Worship Centre", "Women of Excellence Conference", /* Add 17 more answers */],
-            advanced: ["300,000 km/s", "Albert Einstein", "Jupiter", /* Add 17 more answers */]
+            beginner: ["Abuja", "Pastor Ina Omakwu", "1993", "Pastor Sarah Omakwu", "Raising people with a heart for God", "Evangelism and Social Impact", "SALT", "Friday", "The mission Department", "Love Jesus, Love People", "Family values", "Royal Kids", "Spreading the gospel through music", "Sheraton Hotel Abuja", "Trail Blaizers", "Anchor", "Care Groups", "Purple", "7:00 AM", "The Holy Bible"/* Add 17 more answers */],
+            intermediate: ["Marriage Enhancement Clas", "Ushering Department", "Strategic Advance Leadership Training", "Women’s spiritual growth", "Anvil", "Live streaming and recording", "Pentecostal", "Over 500", "2012", "Educational sponsorships", "Medical Missions", "Prison Outreach Team", "Free to Live", "Loving Jesus and loving people", "Family Worship Centre", "Women of Excellence Conference", "www.fwcabuja.org", "Basic Christian education for new believers", "Wuye", "Servant Leadership"/* Add 17 more answers */],
+            advanced: ["Salvation through Jesus Christ", "Intercessory Ministry", "Providing for the needy, widows, and orphans", "Pastoral with structured departments", "Knowing Jesus and Making Him Known", "Given willingly as part of worship", "Love Feast", "Deep understanding of the Bible", "Holiness and righteousness in Christ", "They provide a place for members to study the Bible together", "A remembrance of Jesus’ sacrifice", "Focuses on providing social impact programs for all", "Maintaining order and welcoming people", "Baptism and enrolling them in decipleship training school (DTS)", "It focuses on worship that leads people into God’s presence", "Energetic, joyful, and spirit-filled", "Encourages all members to grow as leaders", "Evangelism and discipleship", "Giving should be done willingly and cheerfully", "By full immersion in water"/* Add 17 more answers */]
         };
 
         // Quiz Functions
